# compacted_segments

./: .gitignore  README.md  pyproject.toml
src/compacted_segments/: __init__.py  compacted_segments.py  fixed_sized_segments.py  sampler.py  space.py
tests/: test_basic.py
